Skip to content

Decklink HDMI Capture broken

Hi,

my blackmagic intensity pro is not opening in 2.1.0 Release Candidate 1

Is this a known bug ???

[0x1a51d18] decklink demux error: Failed to enable video input
[0x1a51d18] main demux debug: no access_demux modules matched
[0x157a538] main input debug: creating access 'decklink' location='', path='(nul                                                      l)'
[0x1a53248] main access debug: looking for access module matching "decklink": 21                                                       candidates
[0x1a53248] main access debug: no access modules matched

[0x157a538] main input error: open of `decklink://' failed
Edited by Rafaël Carré
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information