decklink access: turn 10 bits off by default

It is not clear which connections and which hardware are 10 bits able,
so let's stay on the safe side.

Fixes #9361